Feat: Adiciona o método loadDocument
O método lê o arquivo txt do Files